
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* DISPLAY ;
 int O_RDONLY ;
 char* XORG_BIN ;
 int _exit (int ) ;
 int close (int) ;
 int dup2 (int,int ) ;
 int execve (char*,char**,int *) ;
 int fork () ;
 int nice (int) ;
 int open (char*,int ) ;
 int usleep (int) ;

int launch_xorg_instance(int inc) {
  int pid, newfd;
  char *opt[] = { XORG_BIN, DISPLAY, ((void*)0) };

  if ((pid = fork()) == 0) {
    newfd = open("/dev/tty", O_RDONLY);
    dup2(newfd, 0); close(1); close(2);

    nice(inc); usleep(30000);
    execve(XORG_BIN, opt, ((void*)0));
    _exit(0);
  }

  return pid;
}
